Use www site url.

--- a/workouts/10.html
+++ b/workouts/10.html
@@ -13,7 +13,7 @@
 🎧 SOUND ON for coaching tips!
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/468217408.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/10">
+    <meta property="og:url" content="https://www.verkout.com/workouts/10">
     <meta name="twitter:title" content="Full Body Resistance Band Workout from @tallyrye">
     <meta name="twitter:description" content="I recommend using a band with a medium/ heavy or even x-heavy resistance! ⁣
 ⁣
