--- a/workouts/11.html
+++ b/workouts/11.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="DB DT Conditioning Finisher from @laurabiceps">
     <meta property="og:description" content="As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/195101119.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/11">
+    <meta property="og:url" content="https://www.verkout.com/workouts/11">
     <meta name="twitter:title" content="DB DT Conditioning Finisher from @laurabiceps">
     <meta name="twitter:description" content="As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/195101119.jpg">
