--- a/workouts/12.html
+++ b/workouts/12.html
@@ -12,7 +12,7 @@
 Upper body and core got a little hit too 😉
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/10933664297.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/12">
+    <meta property="og:url" content="https://www.verkout.com/workouts/12">
     <meta name="twitter:title" content="Leg Work from @sandysklarxfit">
     <meta name="twitter:description" content="My legs are feelin’ pretty solid after this sequence. Quads, hammies and glutes were on 🔥
 Upper body and core got a little hit too 😉
