--- a/workouts/13.html
+++ b/workouts/13.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/6648540058.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/13">
+    <meta property="og:url" content="https://www.verkout.com/workouts/13">
     <meta name="twitter:title" content="NO EQUIPMENT HIIT from @fitmoral">
     <meta name="twitter:description" content="Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
 ">
