--- a/workouts/15.html
+++ b/workouts/15.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit">
     <meta property="og:description" content="What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/19283384088.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/15">
+    <meta property="og:url" content="https://www.verkout.com/workouts/15">
     <meta name="twitter:title" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit">
     <meta name="twitter:description" content="What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/19283384088.jpg">
