--- a/workouts/16.html
+++ b/workouts/16.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit">
     <meta property="og:description" content="I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/32506946512.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/16">
+    <meta property="og:url" content="https://www.verkout.com/workouts/16">
     <meta name="twitter:title" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit">
     <meta name="twitter:description" content="I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/32506946512.jpg">
