--- a/workouts/17.html
+++ b/workouts/17.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="I love ending my sessions with some abs.
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/269669410.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/17">
+    <meta property="og:url" content="https://www.verkout.com/workouts/17">
     <meta name="twitter:title" content="PLANK CORE WORKOUT from @faisalpmafitness">
     <meta name="twitter:description" content="I love ending my sessions with some abs.
 ">
