--- a/workouts/18.html
+++ b/workouts/18.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1948126538.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/18">
+    <meta property="og:url" content="https://www.verkout.com/workouts/18">
     <meta name="twitter:title" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn">
     <meta name="twitter:description" content="If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
 ">
