--- a/workouts/19.html
+++ b/workouts/19.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1426793957.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/19">
+    <meta property="og:url" content="https://www.verkout.com/workouts/19">
     <meta name="twitter:title" content="Kettlebell and Bodyweight Burner from @primal.swoledier">
     <meta name="twitter:description" content="Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
 ">
