--- a/workouts/20.html
+++ b/workouts/20.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="No Equipment Cardio + Core from @tay_macfit">
     <meta property="og:description" content="A body weight workout to get that heart rate up followed by some abs! This one is so so good.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/11209990018.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/20">
+    <meta property="og:url" content="https://www.verkout.com/workouts/20">
     <meta name="twitter:title" content="No Equipment Cardio + Core from @tay_macfit">
     <meta name="twitter:description" content="A body weight workout to get that heart rate up followed by some abs! This one is so so good.">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/11209990018.jpg">
