--- a/workouts/22.html
+++ b/workouts/22.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength">
     <meta property="og:description" content="In our programming we train some form of core everyday, it is a foundational piece in our progression!">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/6936520616.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/22">
+    <meta property="og:url" content="https://www.verkout.com/workouts/22">
     <meta name="twitter:title" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength">
     <meta name="twitter:description" content="In our programming we train some form of core everyday, it is a foundational piece in our progression!">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/6936520616.jpg">
