--- a/workouts/23.html
+++ b/workouts/23.html
@@ -12,7 +12,7 @@
 0 Excuses!!!
 Bodyweight only HIIT and core 🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/215128212.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/23">
+    <meta property="og:url" content="https://www.verkout.com/workouts/23">
     <meta name="twitter:title" content="MIGHTY HIIT/ABS from @kimfrench87">
     <meta name="twitter:description" content="5 POWERFUL MOVEMENTS
 0 Excuses!!!
