--- a/workouts/4.html
+++ b/workouts/4.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Monday Upper Body Blaster from @paulsklarxfit">
     <meta property="og:description" content="A bunch of exercises in a card-type workout.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/4">
+    <meta property="og:url" content="https://www.verkout.com/workouts/4">
     <meta name="twitter:title" content="Monday Upper Body Blaster from @paulsklarxfit">
     <meta name="twitter:description" content="A bunch of exercises in a card-type workout.">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg">
