--- a/workouts/6.html
+++ b/workouts/6.html
@@ -12,7 +12,7 @@
 
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/2110625039.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/6">
+    <meta property="og:url" content="https://www.verkout.com/workouts/6">
     <meta name="twitter:title" content="Full Body HIIT from @spinsyddy">
     <meta name="twitter:description" content="This mornings IG LIVE went a little something like this. The last 5 minutes were CHALLENGING!
 
