--- a/workouts/8.html
+++ b/workouts/8.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="FULL BODY work-every-muscle from @natacha.oceane">
     <meta property="og:description" content="We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/8">
+    <meta property="og:url" content="https://www.verkout.com/workouts/8">
     <meta name="twitter:title" content="FULL BODY work-every-muscle from @natacha.oceane">
     <meta name="twitter:description" content="We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg">
