--- a/workouts/9.html
+++ b/workouts/9.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Kettlebell Flow from @paulsklarxfit">
     <meta property="og:description" content="Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/9">
+    <meta property="og:url" content="https://www.verkout.com/workouts/9">
     <meta name="twitter:title" content="Kettlebell Flow from @paulsklarxfit">
     <meta name="twitter:description" content="Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg">
