--- a/workouts/14.html
+++ b/workouts/14.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="ARMS 🔥 from @niknaidoo">
     <meta property="og:description" content="Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/53074968.jpg">
-    <meta property="og:url" content="https://verkout.com/workouts/14">
+    <meta property="og:url" content="https://www.verkout.com/workouts/14">
     <meta name="twitter:title" content="ARMS 🔥 from @niknaidoo">
     <meta name="twitter:description" content="Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣">
     <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/53074968.jpg">
