Fix video preview and play action.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: "Verkout: the workouts of Instagram"
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
 </head>
 <body id="home">
   <!-- Primary Page Layout
