--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@ logo: "https://verkout-app-media.s3.amazonaws.com/images/logo-1024.png"
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8" />
   <title>{{ title }}</title>  
-  <meta name="description" content="{{ description }}" />
+  <meta name="description" content="{{ page.description }}" />
     <meta name="author" content="Verkout" />
-    <meta property="og:title" content="{{ title }}">
-    <meta property="og:description" content="{{ description }}">
-    <meta property="og:image" content="{{ logo }}">
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:description" content="{{ page.description }}">
+    <meta property="og:image" content="{{ page.logo }}">
     <meta property="og:url" content="https://www.verkout.com">
-    <meta name="twitter:title" content="{{ title }}">
-    <meta name="twitter:description" content="{{ description }}">
-    <meta name="twitter:image" content="{{ logo }}">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="{{ page.description }}">
+    <meta name="twitter:image" content="{{ page.logo }}">
     <meta name="twitter:card" content="summary_large_image">
 
   <!-- Mobile Specific Metas
