--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Verkout: the workouts of Instagram"
 description: "The workouts of Instagram. No signup. No fluff. Just workouts and a world of fitness inspiration."
-logo: "https://verkout-app-media.s3.amazonaws.com/images/logo-1024.png"
+logo: "/assets/images/logo-1024.png"
 ---
 
 <head>
