Ok, actually reference the local image now.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Verkout: the workouts of Instagram"
 description: "The workouts of Instagram. No signup. No fluff. Just workouts and a world of fitness inspiration."
-logo: "/assets/images/logo-1024.png"
+logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
 <head>
