Changed page header to Verkout Support vs Verkout Support Center.

--- a/support.html
+++ b/support.html
@@ -51,7 +51,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2>Verkout Support Center</h2>
+      <h2>Verkout Support</h2>
       <h4>Have a problem? We can help.</h4>
     </section>
 
